# CIDEr

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENSE  MainApp.cpp  MainApp.hpp  README.md  cider-test.txt
.cache/clangd/index/: MainApp.cpp.38345EC026C24833.idx  MainApp.hpp.A23EB4A658229174.idx  MainFrame.cpp.170094D1D22936B3.idx  MainFrame.hpp.4AE5B8E6A1BABAE1.idx
doc/: Doxyfile
res/: REMEMBER
res/ui/icons/: essential-collection
src/: CMakeLists.txt
src/Editor/: MainFrame.cpp  MainFrame.hpp
